distrib/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garden-manager-core-service
  labels:
    app.kubernetes.io/name: garden-manager-core-service
    app.kubernetes.io/part-of: garden-manager
spec:
  selector:
    app.kubernetes.io/name: garden-manager-core
  ports:
    - name: http-rest-api
      protocol: TCP
      port: 80
      targetPort: http-rest-api
